--- a/Site web/Real-Estate/.htaccess
+++ b/Site web/Real-Estate/.htaccess
@@ -85,7 +85,7 @@
 # Customize what Apache returns to the client in case of an error.
 # https://httpd.apache.org/docs/current/mod/core.html#errordocument
 
-ErrorDocument 404 /404.html
+ErrorDocument 404 /accueil.html
 
 # ----------------------------------------------------------------------
 # | Error prevention                                                   |
@@ -339,6 +339,8 @@ AddDefaultCharset utf-8
     RewriteRule ^ - [env=proto:https]
     RewriteCond %{HTTPS} !=on
     RewriteRule ^ - [env=proto:http]
+	#RewriteCond %{REQUEST_METHOD} !POST [NC]
+	RewriteRule ^mail/contact_me.php - [PT]
 
 </IfModule>
 
